SEO fixes: canonical tags, redirects, metadata cleanup

--- a/about.html
+++ b/about.html
@@ -191,108 +191,9 @@
                 <div class="swiper swiperPartner">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-7.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-6.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-8.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-2.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-1.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-3.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-5.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-4.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-7.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-6.png"
+                          src="image/1.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -301,7 +202,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-8.png"
+                          src="image/2.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -310,7 +211,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-2.png"
+                          src="image/3.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -319,7 +220,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-1.png"
+                          src="image/4.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -328,7 +229,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-3.png"
+                          src="image/5.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -337,7 +238,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-5.png"
+                          src="image/6.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -346,7 +247,52 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-4.png"
+                          src="image/7.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/8.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/9.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/10.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/11.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/12.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
