--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home - Digital Marketing Agency</title>
+    <meta
+      name="description"
+      content="Swiflare helps businesses grow online with expert SEO, website & app development, performance marketing, social media management, and video production. Get data-driven strategies that boost traffic, leads, and growth."
+    />
+    <title>
+      Swiflare AI Innovations – Website Development, SEO & Digital Marketing
+      Agency in Chennai
+    </title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="./image/fav.png" />
     <!-- Font Awesome CDN -->
@@ -289,108 +296,9 @@
                 <div class="swiper swiperPartner">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-7.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-6.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-8.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-2.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-1.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-3.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-5.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-4.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <div class="partner-slide">
-                          <img
-                            src="image/client-7.png"
-                            alt="Client"
-                            class="partner-logo img-fluid"
-                          />
-                        </div>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-6.png"
+                          src="image/1.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -399,7 +307,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-8.png"
+                          src="image/2.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -408,7 +316,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-2.png"
+                          src="image/3.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -417,7 +325,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-1.png"
+                          src="image/4.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -426,7 +334,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-3.png"
+                          src="image/5.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -435,7 +343,7 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-5.png"
+                          src="image/6.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -444,7 +352,52 @@
                     <div class="swiper-slide">
                       <div class="partner-slide">
                         <img
-                          src="image/client-4.png"
+                          src="image/7.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/8.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/9.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/10.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/11.png"
+                          alt="Client"
+                          class="partner-logo img-fluid"
+                        />
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="partner-slide">
+                        <img
+                          src="image/12.png"
                           alt="Client"
                           class="partner-logo img-fluid"
                         />
@@ -2042,7 +1995,10 @@
                 <div
                   class="card card-blog animate-box animated animate__animated"
                   data-animate="animate__fadeInUp"
-                  onclick="window.location.href = 'single_post.html'"
+                  onclick="
+                    window.location.href =
+                      'blog/mastering-instagram-and-facebook-ads-for-business-growth.html'
+                  "
                 >
                   <div class="blog-image">
                     <img
@@ -2054,15 +2010,18 @@
                     <div class="d-flex flex-row gspace-2">
                       <div class="d-flex flex-row gspace-1 align-items-center">
                         <i class="fa-solid fa-calendar accent-color"></i>
-                        <span class="meta-data">April 14, 2025</span>
+                        <span class="meta-data">February 27, 2026</span>
                       </div>
                       <div class="d-flex flex-row gspace-1 align-items-center">
                         <i class="fa-solid fa-folder accent-color"></i>
                         <span class="meta-data">Social Media Marketing</span>
                       </div>
                     </div>
-                    <a href="single_post.html" class="blog-link"
-                      >Mastering Instagram and Facebook Ads for Business Growth</a
+                    <a
+                      href="blog/mastering-instagram-and-facebook-ads-for-business-growth.html"
+                      class="blog-link"
+                      >Mastering Instagram and Facebook Ads for Business
+                      Growth</a
                     >
                     <p>
                       Learn how to create high-converting Instagram and Facebook
@@ -2071,7 +2030,11 @@
                       strategies, ad creatives, budgeting tips, and performance
                       optimization techniques.
                     </p>
-                    <a href="single_post.html" class="read-more">Read More</a>
+                    <a
+                      href="blog/mastering-instagram-and-facebook-ads-for-business-growth.html"
+                      class="read-more"
+                      >Read More</a
+                    >
                   </div>
                 </div>
               </div>
@@ -2079,7 +2042,10 @@
                 <div
                   class="card card-blog animate-box animated animate__animated"
                   data-animate="animate__fadeInUp"
-                  onclick="window.location.href = 'single_post.html'"
+                  onclick="
+                    window.location.href =
+                      'blog/proven-growth-strategies-for-digital-business-success.html'
+                  "
                 >
                   <div class="blog-image">
                     <img
@@ -2091,24 +2057,30 @@
                     <div class="d-flex flex-row gspace-2">
                       <div class="d-flex flex-row gspace-1 align-items-center">
                         <i class="fa-solid fa-calendar accent-color"></i>
-                        <span class="meta-data">April 14, 2025</span>
+                        <span class="meta-data">February 27, 2026</span>
                       </div>
                       <div class="d-flex flex-row gspace-1 align-items-center">
                         <i class="fa-solid fa-folder accent-color"></i>
                         <span class="meta-data">SEO & Digital Growth</span>
                       </div>
                     </div>
-                    <a href="single_post.html" class="blog-link"
+                    <a
+                      href="blog/proven-growth-strategies-for-digital-business-success.html"
+                      class="blog-link"
                       >Proven Growth Strategies for Digital Business Success</a
                     >
                     <p>
                       Explore powerful digital marketing and SEO strategies that
                       improve search engine rankings, increase website traffic,
-                      and strengthen your online presence. Understand how content
-                      marketing, keyword optimization, and performance tracking
-                      drive measurable business growth.
+                      and strengthen your online presence. Understand how
+                      content marketing, keyword optimization, and performance
+                      tracking drive measurable business growth.
                     </p>
-                    <a href="single_post.html" class="read-more">Read More</a>
+                    <a
+                      href="blog/proven-growth-strategies-for-digital-business-success.html"
+                      class="read-more"
+                      >Read More</a
+                    >
                   </div>
                 </div>
               </div>
