SEO fixes: canonical tags, redirects, metadata cleanup

--- a/footer.html
+++ b/footer.html
@@ -80,22 +80,34 @@
                   <h5>Social Media</h5>
                   <div class="social-container">
                     <div class="social-item-wrapper">
-                      <a href="https://facebook.com" class="social-item">
+                      <a
+                        href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
+                        class="social-item"
+                      >
                         <i class="fa-brands fa-facebook"></i>
                       </a>
                     </div>
                     <div class="social-item-wrapper">
-                      <a href="https://youtube.com" class="social-item">
+                      <a
+                        href="https://www.youtube.com/@Swiflare"
+                        class="social-item"
+                      >
                         <i class="fa-brands fa-youtube"></i>
                       </a>
                     </div>
                     <div class="social-item-wrapper">
-                      <a href="https://instagram.com" class="social-item">
+                      <a
+                        href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                        class="social-item"
+                      >
                         <i class="fa-brands fa-instagram"></i>
                       </a>
                     </div>
                     <div class="social-item-wrapper">
-                      <a href="https://linkedin.com" class="social-item">
+                      <a
+                        href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
+                        class="social-item"
+                      >
                         <i class="fa-brands fa-linkedin"></i>
                       </a>
                     </div>
