--- a/index.html
+++ b/index.html
@@ -1349,19 +1349,19 @@
                             <div class="d-flex flex-column align-items-end">
                               <div class="social-team-container">
                                 <a
-                                  href="https://facebook.com/"
+                                  href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-facebook"></i>
                                 </a>
                                 <a
-                                  href="https://instagram.com/"
+                                  href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-instagram"></i>
                                 </a>
                                 <a
-                                  href="https://linkedin.com/"
+                                  href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-linkedin"></i>
@@ -1390,19 +1390,19 @@
                             <div class="d-flex flex-column align-items-end">
                               <div class="social-team-container">
                                 <a
-                                  href="https://facebook.com/"
+                                  href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-facebook"></i>
                                 </a>
                                 <a
-                                  href="https://instagram.com/"
+                                  href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-instagram"></i>
                                 </a>
                                 <a
-                                  href="https://linkedin.com/"
+                                  href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-linkedin"></i>
@@ -1433,19 +1433,19 @@
                             <div class="d-flex flex-column align-items-end">
                               <div class="social-team-container">
                                 <a
-                                  href="https://facebook.com/"
+                                  href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-facebook"></i>
                                 </a>
                                 <a
-                                  href="https://instagram.com/"
+                                  href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-instagram"></i>
                                 </a>
                                 <a
-                                  href="https://linkedin.com/"
+                                  href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-linkedin"></i>
@@ -1474,19 +1474,19 @@
                             <div class="d-flex flex-column align-items-end">
                               <div class="social-team-container">
                                 <a
-                                  href="https://facebook.com/"
+                                  href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-facebook"></i>
                                 </a>
                                 <a
-                                  href="https://instagram.com/"
+                                  href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-instagram"></i>
                                 </a>
                                 <a
-                                  href="https://linkedin.com/"
+                                  href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-linkedin"></i>
@@ -1515,19 +1515,19 @@
                             <div class="d-flex flex-column align-items-end">
                               <div class="social-team-container">
                                 <a
-                                  href="https://facebook.com/"
+                                  href="https://www.facebook.com/people/Swiflare-AI-Innovations/61575831218081/"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-facebook"></i>
                                 </a>
                                 <a
-                                  href="https://instagram.com/"
+                                  href="https://www.instagram.com/swiflare?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-instagram"></i>
                                 </a>
                                 <a
-                                  href="https://linkedin.com/"
+                                  href="https://www.linkedin.com/in/swiflare-ai-innovations-107151364"
                                   class="social-item"
                                 >
                                   <i class="fa-brands fa-linkedin"></i>
